--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,271 @@
-/* *{
-    margin: 0;
-    padding: 0;
-} */
+/* variable color */
+:root {
+    --primary-color: #fbc02d;
+    --secondary-color: #111111;
+    --third-color: #fff;
+    --fourth-color: #644d12;
+}
 
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+
+body,h1,h2,h3,h4,h5,h6 {
+    font-family: "Titillium Web",sans-serif
+}
+
+a.navbar-brand.team-logo {color: var(--primary-color);font-size: 28px;font-weight: 700;}
 .navbar-nav{
     margin: 0 auto;
 }
 
-.content{
+nav.navbar {
+    background-color: var(--secondary-color);
+}
+
+a.nav-link {
+    color: var(--third-color);
+}
+a.nav-link:hover {
+    color: var(--primary-color);
+}
+
+a.nav-link.active {
+    color: var(--primary-color) !important;
+    font-weight: 600;
+}
+
+.primary-btn {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+}
+.primary-btn:hover{
+    background-color: transparent;
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
+}
+
+.primary-outline-btn{
+    background-color: transparent;
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
+}
+
+.primary-outline-btn:hover{
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+}
+/* .content{
     position: absolute;
+} */
+
+/* .owl-carousel .owl-item img {
+    width: 100%;
+    height: auto;
+  } */
+.single-slider .slider-content{
+    margin-top: 180px;
+}
+
+  .single-slider {
+    height: 596px;
+    text-align: center;
+    color: #fff;
+}
+
+.single-slider h1 {
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.single-slider p{
+    margin-bottom: 40px;
+}
+
+.btn2 {
+    padding: 10px 30px;
+    border-radius: 4px;
+}
+/* about */
+.about-section{
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+
+.accordian-section{
+    padding-top: 60px;
+    padding-bottom: 80px;
+    background-color: rgb(252, 251, 251);
+}
+
+.player{
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+
+
+/* post */
+.post{
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+.post-img img {width: 100%;}
+
+.post-info {
+    background: #f7f7f7;
+    padding: 15px;
+}
+
+.post-info a {
+    color: var(--secondary-color);
+    font-weight: 700;
+}
+
+.our-team img {
+    width: 100%;
+}
+
+.our-team {
+    position: relative;
+    overflow: hidden;
+}
+
+.person-details {
+    position: absolute;
+    bottom: -200px;
+    /* top:200px; */
+    background-color: #fbc12db4;
+    width: 100%;
+    padding:20px;
+    transition: 0.4s;
+  -webkit-transition: 0.4s;
+  -ms-transition: 0.4s;
+}
+.our-team:hover .person-details{
+    bottom: 0px;
+}
+ul.person-social-icons {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+}
+
+ul.person-social-icons li {
+    margin-right: 20px;
+    list-style: none;
+}
+
+ul.person-social-icons li a {
+    color: var(--secondary-color);
+}
+
+/* join-club */
+.join-club{
+    background-color: var(--primary-color);
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+
+.section-title {
+    font-size: 56px;
+    line-height: 66px;
+    font-weight: 700;
+}
+
+.join-club input[type="email"] {
+    padding: 13px 15px;
+    height: 53px;
+}
+
+.join-club button {
+    padding: 13px 15px;
+    height: 53px;
+    border: 0;
+    text-transform: uppercase;
+    background: var(--secondary-color);
+    color: var(--third-color);
+}
+
+/* footer widget */
+.footer-widget{
+    padding: 30px 0;
+    background-color: var(--secondary-color);
+    color: #afb0b2;
+}
+
+.footer-widget h2{
+    color: var(--third-color);
+    margin-bottom: 35px;
+    padding-bottom: 12px;
+    border-bottom: 2px solid #999;
+    font-size: 18px;
+    position: relative;
+    font-weight: 500;
+    text-transform: capitalize;
+    margin-top: 20px;
+}
+
+.footer-widget h2:after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    height: 2px;
+    width: 50px;
+    background-color: #fbc02d;
+}
+.footer-widget .social-link-footer ul,
+.footer-widget .footer-contact ul,
+.footer-widget .useful-links ul{
+    padding: 0;
+}
+.footer-widget .social-link-footer li,
+.footer-widget .footer-contact li,
+.footer-widget .useful-links li {
+    list-style: none;
+    margin-top: 5px;
+}
+
+.footer-widget .useful-links li a{
+    color: #d3d3d3;
+    display: block;
+    border-bottom: 1px solid rgba(102, 102, 102, 0.5);
+    position: relative;
+    padding: 4px 0 4px 14px;
+    text-decoration: none;
+}
+
+.footer-widget .footer-contact li a{
+    color: var(--primary-color);
+    text-decoration: none;
+}
+.footer-widget .social-link-footer li{
+    background-color: var(--primary-color);
+    display: inline-block;
+    padding: 5px 8px;
+    border-radius: 5px;
+}
+.footer-widget .social-link-footer li a{
+    color: var(--secondary-color);
+    text-decoration: none;
+}
+.footer-widget .useful-links li a:after{
+    content: "#";
+    font-size: 14px;
+    left: 0;
+    position: absolute;
+    top: 4px;
+    color: #afb0b2;
+    font-weight: 400;
+}
+
+
+
+
+/* footer */
+footer{
+    background-color: var(--secondary-color);
+    color: var(--third-color);
+    padding: 5px 0 20px 0;
+    font-size: 14px;
 }
 
